# memhog

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
src/: main.rs
src/lib/: mod.rs  procdb.rs  query_table.rs  summary.rs  syntax_highlighting.rs
